--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,5 @@
-aiohttp
-discord.py
-nltk
-numpy
-python-dotenv
+aiohttp<3.8.0,>=3.6.0
+discord.py~=1.7.3
+nltk~=3.7
+numpy~=1.22.4
+python-dotenv~=0.20.0
